Fix toolbar alignment

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/ui.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/ui.css
@@ -40,11 +40,15 @@
   display: block;
   width: 100%;
 }
-.defaultSkin .mceLeft {
+.defaultSkin .mceLeft .mceToolbarRow {
   text-align: left
 }
-.defaultSkin .mceRight {
+.defaultSkin .mceRight .mceToolbarRow {
   text-align: right
+}
+
+.defaultSkin .mceCenter .mceToolbarRow {
+  text-align: center
 }
 
 /* External */
